--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ nav{
     color: white;
 }
 
-.btn-dark-green{
+.btn{
     background-color: #8C52FF;
     color: white;
     text-transform: uppercase;
@@ -46,3 +46,210 @@ nav{
     background-position: center;
     color: white;
 }
+
+.about-section{
+    background: url("../img/pic.jpg") no-repeat left;
+    background-size: 55%;
+    background-color: #141414;
+    overflow: hidden;
+    padding: 100px 0;
+}
+
+.why-section{
+  background: url("../img/pic3.jpeg") no-repeat left;
+  background-size: 55%;
+  background-color: #fdfdfd;
+  overflow: hidden;
+  padding: 100px 0;
+}
+
+.inner-container{
+    width: 55%;
+    float: right;
+    background-color: #fdfdfd;
+    padding: 150px;
+}
+
+.inner-container h1{
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: 900;
+}
+
+.text{
+    font-size: 13px;
+    color: #545454;
+    line-height: 30px;
+    text-align: justify;
+    margin-bottom: 40px;
+}
+
+.skills{
+    display: flex;
+    justify-content: space-between;
+    font-weight: 700;
+    font-size: 13px;
+}
+
+@media screen and (max-width:1200px){
+    .inner-container{
+        padding: 80px;
+    }
+}
+
+@media screen and (max-width:1000px){
+    .about-section{
+        background-size: 100%;
+        padding: 100px 40px;
+    }
+    .inner-container{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:600px){
+    .about-section{
+        padding: 0;
+    }
+    .inner-container{
+        padding: 60px;
+    }
+}
+
+.team-section{
+    background: #fdfdfd;
+    text-align: center;
+  }
+  .inner-width{
+    max-width: 1200px;
+    margin: auto;
+    padding: 40px;
+    color: #333;
+    overflow: hidden;
+  }
+  .team-section h1{
+    font-size: 20px;
+    text-transform: uppercase;
+    display: inline-block;
+    border-bottom: 4px solid;
+    padding-bottom: 10px;
+  }
+  .pe{
+    float: left;
+    width: calc(100% / 3);
+    overflow: hidden;
+    padding: 40px 0;
+    transition: 0.4s;
+  }
+  .pe:hover{
+    background: #ddd;
+  }
+  .pe img{
+    width: 120px;
+    height: 120px;
+  }
+  .p-name{
+    margin: 16px 0;
+    text-transform: uppercase;
+  }
+  .p-des{
+    font-style: italic;
+    color: #3498db;
+  }
+  .p-sm{
+    margin-top: 12px;
+  }
+  .p-sm a{
+    margin: 0 4px;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    transition: 0.4s;
+  }
+  .p-sm a:hover{
+    transform: scale(1.3);
+  }
+  .p-sm a i{
+    color: #333;
+    line-height: 30px;
+  }
+  @media screen and (max-width:600px) {
+    .pe{
+      width: 100%;
+    }
+  }
+
+  .services-section{
+    width: 100%;
+  }
+  
+  .inner-width{
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 20px;
+  }
+  
+  .services-section h1{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 80px;
+  }
+  
+  .services-section h1 strong{
+    color: #8C52FF;
+  }
+  
+  .service{
+    text-align: center;
+    margin: 20px 0;
+  }
+  
+  .service-icon{
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    background: #ecf6ff;
+    border-radius: 50%;
+    color: #8C52FF;
+    line-height: 60px;
+    font-size: 25px;
+  }
+  
+  .service-name{
+    font-weight: 600;
+    font-size: 18px;
+    margin: 20px 0;
+  }
+  
+  .service-desc{
+    max-width: 400px;
+    margin: auto;
+    color: #333;
+    font-size: 17px;
+  }
+  
+  .owl-dots{
+    text-align: center;
+    margin-top: 40px;
+  }
+  
+  .owl-dot{
+    width: 14px;
+    height: 14px;
+    background: #808080 !important;
+    margin: 0 6px;
+    border-radius: 14px;
+    outline: none;
+    transition: .3s linear;
+  }
+  
+  .owl-dot.active{
+    width: 36px;
+    background: #8C52FF!important;
+  }
+  
+  .owl-dot:hover{
+    width: 36px;
+    background: #8C52FF !important;
+  }
